<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Dark" />
    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        >
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="60dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_first_name"
            android:layout_width="0dp"
            android:layout_weight="0.8"
            android:layout_height="fill_parent"
            >

            <EditText
                android:id="@+id/input_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:hint="@string/first_name" />
        </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_last_name"
                android:layout_width="0dp"
                android:layout_weight="1.2"
                android:layout_height="fill_parent">

                <EditText
                    android:id="@+id/input_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:hint="@string/last_name" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_date_of_birth_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_date_of_birth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/date_of_birth"
                android:drawableRight="@mipmap/ic_launcher"
                android:padding="3dp"
                android:drawablePadding="3dp"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/email" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/phone_number" />
        </android.support.design.widget.TextInputLayout>

        <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
            android:id="@+id/current_location_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/current_location"
            android:textColorHint="#66000000"
            app:met_floatingLabel="normal" />


        <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
            android:id="@+id/experience_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/total_exp"
            android:textColorHint="#66000000"
            app:met_floatingLabel="normal" />

      <!--  <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </Spinner>-->
        <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
            android:id="@+id/academic_qualificatio_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/academic_qualification"
            android:textColorHint="#66000000"
            app:met_floatingLabel="normal" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_function"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_function"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/function" />
        </android.support.design.widget.TextInputLayout>



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/accept_terms_conds_check"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accepet_terms_conds"
                android:layout_toRightOf="@id/accept_terms_conds_check"
                android:layout_marginLeft="4dp"/>
        </RelativeLayout>

        <Button android:id="@+id/btn_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:background="@color/colorPrimary"
            android:layout_marginTop="40dp"
            android:textColor="@android:color/white"/>
    </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>
