<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_second_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.example.mobiledevelopmenttask.SecondActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:title="@string/register"
            />
    </android.support.design.widget.AppBarLayout>

    <Button android:id="@+id/btn_sibmit_to_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_form_to_mail"
        android:layout_centerInParent="true"
        android:background="@color/colorAccent"
        android:layout_marginTop="40dp"
        android:textColor="@android:color/white"/>
    <Button android:id="@+id/btn_register_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_sibmit_to_mail"
        android:text="@string/register_user_data"
        android:layout_centerInParent="true"
        android:background="@color/colorAccent"
        android:layout_marginTop="40dp"
        android:textColor="@android:color/white"/>
</RelativeLayout>
